rub-746, overflow fix

--- a/src/app/features/trade/components/provider-element/provider-element.component.scss
+++ b/src/app/features/trade/components/provider-element/provider-element.component.scss
@@ -46,12 +46,14 @@
     display: flex;
     flex: auto;
     align-items: center;
+    min-width: 0;
   }
 
   &__token {
     display: flex;
     flex-direction: column;
     gap: var(--tui-padding-xs);
+    min-width: 0;
   }
 
   &__token-info {
@@ -73,7 +75,7 @@
   }
 
   &__token-amount {
-    max-width: 100%;
+    max-width: max-content;
     overflow: hidden;
 
     font-weight: 700;
@@ -168,6 +170,7 @@
     flex-direction: column;
     gap: var(--tui-padding-xs);
     align-items: flex-end;
+    min-width: 0;
   }
 
   &__expandable {
